Resolved paramater page dark mode issue

--- a/src/components/styles/common.scss
+++ b/src/components/styles/common.scss
@@ -32,3 +32,7 @@
     max-width: 50%;
   }
 }
+
+.pipelines-console-plugin__background-transparent {
+  background-color: transparent;
+}
